--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,12 @@
 # Starts a client in a docker container
 FROM golang:1.17-alpine AS base
 
-COPY . /src
-WORKDIR /src
-
+COPY go.mod go.sum /src/
+WORKDIR /src/
 RUN go mod download
-RUN go build -o "bin/out" main.go
+
+COPY . /src/
+
+RUN go build -o "bin/out" github.com/toffernator/miniproject3/client
+EXPOSE 50000
 ENTRYPOINT ["bin/out"]
