--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,43 +1,57 @@
 services:
   replica1:
     image: miniproject3-rm
-    build: RM
+    build:
+      context: .
+      dockerfile: ./RM/Dockerfile
     networks:
       - auction-net
     command: node2:50000 --start
   replica2:
     image: miniproject3-rm
-    build: RM
+    build: 
+      context: .
+      dockerfile: ./RM/Dockerfile
     networks:
       - auction-net
     command: node3:50000
   replica3:
     image: miniproject3-rm
-    build: RM
+    build: 
+      context: .
+      dockerfile: ./RM/Dockerfile
     networks:
       - auction-net
     command: node4:50000
   frontend1:
     image: miniproject3-frontend
-    build: frontend
+    build: 
+      context: .
+      dockerfile: ./frontend/Dockerfile
     networks:
       - auction-net
     command: node5:50000
   frontend2:
     image: miniproject3-frontend
-    build: frontend
+    build: 
+      context: .
+      dockerfile: ./frontend/Dockerfile
     networks:
       - auction-net
     command: node1:50000
   client1:
     image: miniproject3-client
-    build: client
+    build: 
+      context: .
+      dockerfile: ./client/Dockerfile
     networks:
       - auction-net
     command: node5:50000
   client2:
     image: miniproject3-client
-    build: client
+    build: 
+      context: .
+      dockerfile: ./client/Dockerfile
     networks:
       - auction-net
     command: node1:50000
