--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,33 +8,37 @@ services:
       - auction-net
   replica2:
     image: miniproject3-rm
-    build: 
+    build:
       context: .
       dockerfile: ./RM/Dockerfile
     networks:
       - auction-net
   replica3:
     image: miniproject3-rm
-    build: 
+    build:
       context: .
       dockerfile: ./RM/Dockerfile
     networks:
       - auction-net
   frontend1:
     image: miniproject3-frontend
-    build: 
+    build:
       context: .
       dockerfile: ./frontend/Dockerfile
     networks:
       - auction-net
+    ports:
+      - "50002:50000"
     command: replica1:50000 replica2:50000 replica3:50000
   frontend2:
     image: miniproject3-frontend
-    build: 
+    build:
       context: .
       dockerfile: ./frontend/Dockerfile
     networks:
       - auction-net
+    ports:
+      - "50001:50000"
     command: replica1:50000 replica2:50000 replica3:50000
 networks:
   auction-net: {}
